# speaker-diarization

./: .gitignore  README.md  cspace_labels.csv  expose.typ  main.py  pipeline.py  pyproject.toml  seconds.json  visu.py
elsearticle/: main.typ  refs.bib
lib/: const.py  embedding_system.py  log.py  vad_data_loader.py
lib/models/: module.py
lib/modules/clustering/: cspace_clustering.py  dbscan_clustering.py
lib/modules/embeddings/: pyannote_inference.py  speechbrain_inference.py
lib/modules/helpers/: labels_to_hyp.py  vad_to_wav_segments.py
lib/modules/overlap/: pyannote_overlap_module.py
lib/modules/vad/: silero.py
lib/modules/visualization/: embedding_visu.py
lib/test/: test_vad_output.py
lib/utils/: xml_to_ref.py
pretrained_models/speechbrain_ecapa/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
speaker_diarization.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
