[project]
name = "speaker-diarization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiortc>=1.14.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "omegaconf>=2.3.0",
    "pandas>=3.0.1",
    "pyannote-audio>=4.0.4",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "scikit-learn>=1.8.0",
    "silero-vad>=6.2.1",
    "sounddevice>=0.5.5",
    "speechbrain>=1.0.3",
    "torch>=2.11.0",
]
